--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -9,5 +9,17 @@
         android:id="@+id/moviesFragment"
         android:name="com.example.flexexam.fragments.movie.MoviesFragment"
         android:label="fragment_movies"
-        tools:layout="@layout/fragment_movies" />
+        tools:layout="@layout/fragment_movies" >
+        <action
+            android:id="@+id/action_moviesFragment_to_movieDetailsFragment"
+            app:destination="@id/movieDetailsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/movieDetailsFragment"
+        android:name="com.example.flexexam.fragments.detail.MovieDetailsFragment"
+        android:label="MovieDetailsFragment" >
+        <argument
+            android:name="MovieDetails"
+            app:argType="com.example.flexexam.model.Movie" />
+    </fragment>
 </navigation>
