--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -52,6 +52,7 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:layout_marginBottom="8dp"
                             android:orientation="vertical">
 
                             <TextView
@@ -73,8 +74,8 @@
                         </LinearLayout>
 
                         <LinearLayout
-                            android:layout_width="200dp"
-                            android:layout_height="200dp"
+                            android:layout_width="350dp"
+                            android:layout_height="400dp"
                             android:layout_gravity="center">
 
                             <ImageView
